--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-native": "0.60.5",
     "react-native-camera": "^3.3.2",
     "react-native-fetch-blob": "^0.10.8",
-    "react-native-splash-screen": "^3.2.0"
+    "react-native-splash-screen": "^3.2.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
