--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "react-native": "0.60.5",
     "react-native-camera": "^3.3.2",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.2.0",
+    "react-native-screens": "^1.0.0-alpha.23",
     "react-native-splash-screen": "^3.2.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.9.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4"
   },
